# OT_Project_LowRank

./: .gitignore  FRLC_demo.ipynb  FRLC_tutorial.ipynb  README.md  pyproject.toml
FLRC_solver/: __init__.py  utils.py
FRLC_solver/: __init__.py  gradients_computation.py  initialization.py  sinkhorn_projection.py  solver.py  utils.py
